<resources>
    <string name="app_name">Monkey Ladder</string>
    <string name="title_activity_main">title_activity_main</string>
    <string name="levelHeaderText">Level</string>
    <string name="level">1</string>
    <string name="scoreHeaderText">SCORE</string>
    <string name="score">0</string>
    <string name="monkeyLadder">Monkey Ladder</string>
    <string name="zeroScore">0</string>
    <string name="livesText">%1$d</string>
    <string name="livesHeaderText">Lives</string>
    <string name="save">Save</string>
    <string name="quit">Quit</string>
    <string name="continueButton">Continue</string>
    <string name="titleContinueScreen">Continue</string>
    <string name="title_activity_chart">Activity Chart</string>
    <string name="title_activity_landing">Landing Screen</string>
    <string name="todo">TODO</string>
    <string name="nbackGame">N Back</string>
    <string name="_0">0</string>
    <string name="scoreText">SCORE</string>
    <string name="_11_12">11:12</string>
    <string name="position">Position</string>
    <string name="audio">Audio</string>>
    <string name="clock">11:12</string>
    <string name="scoreZero">0</string>
    <string name="time">TIME</string>
    <string name="imageViewContentDesc">nback image holder</string>
    <string name="soundMatch">Sound</string>
    <string name="positionMatch">Position</string>
    <string name="saveButton">Save</string>
    <string name="exitButton">Exit</string>
    <string name="startGame">Start</string>
    <string name="versionDropdownTxt">Version</string>
    <string name="continueButtonTxt">Continue</string>
    <string name="editSettings">Settings</string>
    <string-array name="nBackArray">
        <item>Dual 1-Back</item>
        <item>Dual 2-Back</item>
        <item>Dual 3-Back</item>
        <item>Dual 4-Back</item>
        <item>Dual 5-Back</item>
        <item>Dual 6-Back</item>
        <item>Dual 7-Back</item>
        <item>Dual 8-Back</item>
        <item>Dual 9-Back</item>
    </string-array>
    <string name="title_activity_settings">Settings</string>

    <string name="pref_header_general">General</string>
    <string name="pref_header_score">Score</string>

    <string name="pref_score_max_title_display_name">Max Score To Fallback</string>
    <string name="pref_score_min_title_display_name">Min. Score To Advance</string>

    <string name="pref_title_social_recommendations">Enable social recommendations</string>
    <string name="pref_description_social_recommendations">Recommendations for people to contact
        based on your message history
    </string>

    <string name="pref_default_display_name">80</string>
    <string name="pref_feedback_vibration">Feedback Vibration</string>
    <string name="pref_trial_length_title_display_name">Single Round Length (seconds)</string>

    <string-array name="pref_sync_frequency_titles">
        <item>15 minutes</item>
        <item>30 minutes</item>
        <item>1 hour</item>
        <item>3 hours</item>
        <item>6 hours</item>
        <item>Never</item>
    </string-array>
    <string name="countdown_title">Countdown</string>
    <string name="stroop_game">Stroop</string>
</resources>