<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/layoutHolder1"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimary"
    android:baselineAligned="false"
    android:orientation="vertical">


    <TextView
        android:id="@+id/score"
        android:layout_width="108sp"
        android:layout_height="50sp"
        android:text=""
        android:layout_gravity="center"
        android:textAlignment="center"
        android:layout_marginTop="60dp"
        android:textColor="@android:color/white" />

    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:id="@+id/layoutHolder2"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:baselineAligned="false"
        android:orientation="horizontal">

        <Button
            android:id="@+id/saveButton"
            android:layout_width="150dp"
            android:layout_height="55dp"
            android:layout_marginStart="125dp"
            android:layout_marginTop="55dp"
            android:background="@drawable/monkey_ladder_button_border"
            android:text="@string/save"
            android:textColor="#fbfcfc"
            android:textStyle="bold|italic" />

        <Button
            android:id="@+id/quitButton"
            android:layout_marginStart="8dp"
            android:layout_width="150dp"
            android:layout_height="55dp"
            android:layout_marginTop="55dp"
            android:background="@drawable/monkey_ladder_button_border"
            android:text="@string/quit"
            android:textColor="#fbfcfc"
            android:textStyle="bold|italic" />

        <Button
            android:id="@+id/continueButton"
            android:layout_width="150dp"
            android:layout_height="55dp"
            android:layout_marginTop="55dp"
            android:layout_marginStart="8dp"
            android:background="@drawable/monkey_ladder_button_border"
            android:text="@string/continueButton"
            android:textColor="#fbfcfc"
            android:textStyle="bold|italic" />
    </LinearLayout>
</LinearLayout>
